// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Breadcrumbs component renders as expected with parameters 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Breadcrumbs
    elements={
        Array [
            Object {
              "href": "/home",
              "name": "home",
            },
            Object {
              "isActive": true,
              "name": "myProfile",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
>
        <BreadcrumbItem
                active={undefined}
                href="/home"
                tag="a"
        >
                Accueil
        </BreadcrumbItem>
        <BreadcrumbItem
                active={true}
                href={undefined}
                tag="span"
        >
                Mon Profil
        </BreadcrumbItem>
</Breadcrumb>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "aria-label": "breadcrumb",
        "children": Array [
          <BreadcrumbItem
            active={undefined}
            href="/home"
            tag="a"
>
            Accueil
</BreadcrumbItem>,
          <BreadcrumbItem
            active={true}
            href={undefined}
            tag="span"
>
            Mon Profil
</BreadcrumbItem>,
        ],
        "listTag": "ol",
        "tag": "nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "active": undefined,
            "children": "Accueil",
            "href": "/home",
            "tag": "a",
          },
          "ref": null,
          "rendered": "Accueil",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "active": true,
            "children": "Mon Profil",
            "href": undefined,
            "tag": "span",
          },
          "ref": null,
          "rendered": "Mon Profil",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
>
          <BreadcrumbItem
                    active={undefined}
                    href="/home"
                    tag="a"
          >
                    Accueil
          </BreadcrumbItem>
          <BreadcrumbItem
                    active={true}
                    href={undefined}
                    tag="span"
          >
                    Mon Profil
          </BreadcrumbItem>
</Breadcrumb>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "aria-label": "breadcrumb",
          "children": Array [
            <BreadcrumbItem
              active={undefined}
              href="/home"
              tag="a"
>
              Accueil
</BreadcrumbItem>,
            <BreadcrumbItem
              active={true}
              href={undefined}
              tag="span"
>
              Mon Profil
</BreadcrumbItem>,
          ],
          "listTag": "ol",
          "tag": "nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "active": undefined,
              "children": "Accueil",
              "href": "/home",
              "tag": "a",
            },
            "ref": null,
            "rendered": "Accueil",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "active": true,
              "children": "Mon Profil",
              "href": undefined,
              "tag": "span",
            },
            "ref": null,
            "rendered": "Mon Profil",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing Breadcrumbs component renders as expected without parameters 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Breadcrumbs />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
/>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "aria-label": "breadcrumb",
        "children": undefined,
        "listTag": "ol",
        "tag": "nav",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
/>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "aria-label": "breadcrumb",
          "children": undefined,
          "listTag": "ol",
          "tag": "nav",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;
